app/assets/main.css
/* ... */
.font-size-xxl {
  font-size: var(--font-size-xxl);
}
.font-size-xl {
  font-size: var(--font-size-xl);
}
.font-size-lg {
  font-size: var(--font-size-lg);
}
.font-size-md {
  font-size: var(--font-size-md);
}
.font-size-sm {
  font-size: var(--font-size-sm);
}
.font-size-xs {
  font-size: var(--font-size-xs);
}
.font-size-xxs {
  font-size: var(--font-size-xxs);
}

.flex-wrapper {
  --gap: 0.5rem;
  display: flex;
  flex-wrap: wrap;
  flex-grow: 1;
  align-items: center;
  gap: var(--gap);
}

.grid-wrapper {
  --gap: 1rem;
  display: grid;
  gap: var(--gap);
}

/* CSS Reset */
*,
*::after,
*::before {
  box-sizing: border-box;
}

html {
  color-scheme: var(--color-scheme, dark light);
  accent-color: var(--color-accent, inherit);

  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  text-size-adjust: none;

  /* prevent obscured content when using the keyboard to shift focus */
  scroll-padding-block: 2rem;
  @media (min-width: 360px) {
    scroll-padding-block: 4rem;
  }
}

dd {
  margin-inline-start: 0;
}

body {
  margin: 0;
  min-height: 100svh;
  background-color: var(--color-bg);
  font-family: system-ui, sans-serif;
  line-height: 1.5;
  overflow-wrap: break-word;
  color: var(--color-text);
}

img {
  word-break: break-all;
  font-style: italic;
  font-size: var(--font-size-xs);
}

video,
img,
picture,
svg {
  display: block;
  max-width: 100%;
  object-fit: cover;
}

figure {
  margin: 0;
}

blockquote {
  margin: 0;
  border-inline-start: 3px solid var(--color-accent);
  padding-inline-start: 1rem;

  > p {
    font-style: italic;
  }
}

a {
  color: currentColor;
  outline-offset: 2px;
  text-underline-offset: 0.25em;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
button,
input,
label,
.label,
legend {
  line-height: 1.2;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
  -webkit-hyphens: auto;
  hyphens: auto;
}

p {
  text-wrap: pretty;
  white-space: pre-line;
}

.bold,
b,
strong {
  font-weight: 600;
}

.overflow-wrap-anywhere {
  overflow-wrap: anywhere;
}

.small-caps {
  font-variant-caps: all-small-caps;
}

.uppercase {
  text-transform: uppercase;
}

.lowercase {
  text-transform: lowercase;
}

.capitalize::first-letter,
.capitalize > ::first-letter {
  text-transform: capitalize;
}

.section-topbar {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: start;
  column-gap: 0.5rem;
  row-gap: 1rem;
}

dl {
  margin-block: 0;
}

ol {
  list-style-position: outside;
  padding-inline-start: 2rem;
}

ul {
  list-style-position: outside;
  padding-inline-start: 1.25rem;

  li > p {
    margin-block: 0rem 1rem;
  }
}

ul[role='list'],
ol[role='list'] {
  list-style: none;
  padding-inline-start: 0;
  margin-block: 0;
}

ul > li::marker {
  color: inherit;
}

ol > li::marker {
  color: var(--color-accent);
}

code {
  background-color: var(--color-grey-bg);
  padding: 0.1rem 0.2rem;
  border-radius: var(--radius-sm);
  overflow-wrap: anywhere;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

pre {
  overflow: auto;
  white-space: pre-wrap;
  word-break: break-all;
}

pre code {
  display: inline-block;
  padding: 0.75rem 1rem;
}

kbd {
  font-family: system-ui;
  background-color: var(--color-white);
  border-radius: var(--radius-sm);
  padding-inline: 0.5rem;
  padding-block: 0.35rem;
  border: 1px solid var(--color-grey-bg);
}

abbr {
  text-decoration: none;

  &:hover {
    text-decoration: dotted underline;
    text-underline-offset: 0.35rem;
  }
}

hr {
  border: 0;
  width: 100%;
  height: 1px;
  background-color: var(--color-grey-bg);
  margin-block: 0;
}

table {
  border-collapse: collapse;
  text-align: left;
  font-variant-numeric: tabular-nums;

  thead th {
    font-weight: 600;
    color: var(--color-grey-text);
  }

  tbody th {
    font-weight: 500;
  }

  th,
  td {
    padding: 0.5rem;
  }

  thead tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 0 0 1px 0;
  }

  tbody tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 1px 0;
  }
}

.table-cell {
  vertical-align: middle;
  display: inline-flex;
  align-items: center;
  gap: 0.5rem;
}

button {
  font: inherit;
  color: inherit;
  font-weight: 600;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

:disabled {
  cursor: default;
}

.button-group {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;

  > .button {
    flex-grow: 1;
  }
}

.label,
label {
  font-weight: 500;
  -webkit-user-select: none;
  user-select: none;

  &.disabled {
    opacity: 25%;
  }
}

.user-select-none {
  -webkit-user-select: none;
  user-select: none;
}

address {
  font-style: normal;
}

fieldset {
  border: none;
  padding: 0;
  margin-inline: 0;
}

legend {
  padding: 0;
  font-weight: 600;
}

textarea {
  padding: 0.5rem;
  resize: vertical;
}

input {
  background-color: transparent;
}

.file-input-wrapper,
.form-field-wrapper,
.markdown-editor {
  label,
  .label {
    display: inline-flex;
    gap: 0.35rem;
    min-height: 1.25rem;
    align-items: center;
    font-size: var(--font-size-xs);
    margin-block-end: 0.25rem;
  }
}
/* ... */

